grammar.js
    module: $ => choice(
      seq(
        optional($.module_header),
        optional($.prelude),
        repeat($.import),
        repeat($._command),
      ),
      // Fragment fallback: a sequence of tactics and/or expressions,
      // as seen in hover popups and docstring code blocks.
      repeat1($._fragment_element),
    ),

    _fragment_element: $ => choice(
      $._tactic,
      $._expression,
    ),

    _command: $ => choice(
      // Decorated declarations: doc comment + attributes + modifiers + decl.
      // Wrapped in a single visible node so Helix's syntax-tree expand
      // selection (alt+o) can grow from inside the body to the full
      // declaration including its preamble.
      $.decorated_declaration,
      // Other commands (no modifiers)
      $.namespace,
      $.section,
      $.end,
      $.open,
      $.export,
      $.variable,
      $.universe,
      $.hash_command,
      $.syntax,
      $.set_option,
      $.include,
      $.omit,
    ),

    // `set_option name value` — option setter (lean4 Command.lean:218).
    // Use prec.left so the dotted-name parse is preferred over splitting
    // `name.field value` into name + projection-applied-to-value.
    _modifier: _ => choice('noncomputable', 'partial', 'protected', 'private', 'public', 'meta', 'unsafe', 'scoped', 'local'),


    // Namespace: `namespace Foo` or `namespace Foo.Bar.Baz`
    attribute: $ => prec.left(seq(
      'attribute',
      '[', commaSep1($.identifier), ']',
      repeat1($._expression),
    )),

    // `notation:10000 n "!" => factorial n`
    hash_command: $ => prec.left(seq(
      /#[a-zA-Z_]\w*/,
      repeat($._expression),
    )),

    // `example : 1 + 1 = 2 := by rfl`
    _declaration: $ => choice(
      $.definition,
      alias($._instance_decl, $.definition),
      $.constant,
      $.opaque,
      $.axiom,
      $.structure,
      $.inductive,
      $.class_inductive,
    ),

    // Doc comment + attributes + modifiers + declaration, all wrapped in one
    // visible node so the Helix syntax-tree expand selection grows from the
    // body's expression up to the full declaration with its preamble.
    decorated_declaration: $ => seq(
      optional(field('doc', $.doc_comment)),
      optional(field('attributes', $.attributes)),
      repeat(field('modifier', $._modifier)),
      field('declaration', choice(
        $._declaration,
        $.example,
        $.notation,
        $.attribute,
        $.initialize,
      )),
    ),

    // `@[simp, inline]`, `@[extern "foo"]`, `@[command_elab assertCheckCmd]`,
    // `@[default_instance prio]`, etc. Each comma-separated entry is a name
    // followed by an optional sequence of atomic arguments (idents/strings/
    // numbers).
    //
    // `@[` is one token, not `'@', '['` — see #1.
    attributes: $ => seq(
      token('@['),
      commaSep1($.attribute_entry),
      ']',
    ),

    attribute_entry: $ => seq(
      field('name', $._name),
      repeat(field('arg', choice($.identifier, $.escaped_identifier, $.string, $.number))),
    ),

    // def/theorem/lemma/abbrev — name is required, no ambiguity with binders.
    // Modifiers (noncomputable, partial, etc.) are consumed transparently.
    definition: $ => seq(
      field('kind', choice('def', 'theorem', 'lemma', 'abbrev')),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      $._declaration_body,
    ),

    // Shared body production for definition and instance — factored out
    // to let the parser reuse states across both declaration forms.
    _declaration_body: $ => choice(
      seq(':=', $._layout_start, field('body', $._expression), $._layout_end),
      seq('where', $._layout_start, repeat1(seq(field('body', $.where_decl), optional($._layout_semicolon))), $._layout_end),
      repeat1($.match_arm),
    ),

    // instance — name is optional; aliased to `definition` in the parse tree.
    // Instance binders are always bracketed (no bare identifier ambiguity with name).
    where_decl: $ => seq(
      field('name', $.identifier),
      repeat(field('binders', choice($.identifier, $._bracketed_binder))),
      optional($._type_spec),
      choice(
        seq(':=', $._layout_start, field('body', $._expression), $._layout_end),
        // Match-equation style: `toString | .style => "style" | ...`
        repeat1($.match_arm),
      ),
    ),

    // `constant foo : T` — opaque constant declaration
    constant: $ => seq(
      'constant',
      field('name', $._name),
      optional($._type_spec),
      optional(seq(':=', field('body', $._expression))),
    ),

    // `opaque foo : T := e` — opaque definition
    structure: $ => seq(
      choice('structure', 'class'),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional(field('extends', seq('extends', commaSep1($._expression)))),
      optional($._type_spec),
      optional(seq(
        choice(':=', 'where'),
        $._layout_start,
        repeat(seq(field('fields', choice($.structure_field, $._bracketed_binder)), optional($._layout_semicolon))),
        $._layout_end,
      )),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    ),

    // Structure fields: `x : T` or `x : T := default` or `x := default`
    structure_field: $ => seq(
      optional(field('doc', $.doc_comment)),
      field('name', $.identifier),
      repeat($._bracketed_binder),
      choice(
        seq(':', field('type', $._expression), optional(seq(':=', field('default', $._expression)))),
        seq(':=', field('default', $._expression)),
      ),
    ),

    inductive: $ => seq(
      'inductive',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      optional(choice(':=', 'where')),
      repeat(field('constructors', $.constructor)),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    ),

    // `class inductive Foo where | ...` — prec(1) to win over `structure`
    // when parser sees `class` followed by `inductive`
    class_inductive: $ => prec(1, seq(
      'class', 'inductive',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      optional(choice(':=', 'where')),
      repeat(field('constructors', $.constructor)),
      optional(seq('deriving', commaSep1(field('deriving', $.identifier)))),
    )),

    constructor: $ => seq(
      optional(field('doc', $.doc_comment)),
      '|',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
    ),

    // ============================================================
    // Binders
    // ============================================================

    binders: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // Quantifier binders: `x y : Nat` or `(x : Nat) {y : Nat}`
    // Bare identifiers can have a trailing `: Type` annotation
    _bracketed_binder: $ => choice(
      $.explicit_binder,
      $.implicit_binder,
      $.instance_binder,
    ),

    explicit_binder: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      optional(seq(':=', field('default', $._expression))),
      ')',
    ),

    implicit_binder: $ => seq(
      '{',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      '}',
    ),

    instance_binder: $ => seq(
      '[',
      optional(seq(field('name', $.identifier), ':')),
      field('type', $._expression),
      ']',
    ),

    _type_spec: $ => seq(':', field('type', $._expression)),

    // ============================================================
    // Expressions
    // ============================================================

    _expression: $ => choice(
      $._atom,
      $.application,
      $.subscript,
      $.complement,
      $.binary_expression,
      $.unary_expression,
      $.explicit,
      // postfix ! and ? are handled by subscript modifier and notation
      $.projection,
      $.arrow,
      $.fun,
      $.quantifier,
      $.big_operator,
      $.let,
      $.have,
      $.if,
      $.if_let,
      $.match,
      $.do,
      $.by,
      $.try,
      $.return,
      $.as_pattern,
      $.show,
      $.suffices,
    ),

    // `show T from proof` / `show T by tactic` — explicit type ascription with proof.
    as_pattern: $ => seq(
      field('binder', $.identifier),
      token.immediate('@'),
      field('pattern', $._atom),
    ),

    // Atoms: self-delimiting expressions that can appear as function arguments
    _atom: $ => choice(
      $.identifier,
      $.escaped_identifier,
      $.sort_star,
      $.number,
      $.float,
      $.string,
      $.interpolated_string,
      $.char,
      $.parenthesized,
      $.named_argument,
      $.tuple,
      $.anonymous_constructor,
      $.structure_instance,
      $.array,
      $.list,
      $.range,
      $.hole,
      $.synthetic_hole,
      $.quoted_name,
      $.double_quoted_name,
      $.syntax_quotation,
      $.ellipsis,
      $.sorry,
      $._boolean,
      $.cdot,
      $.subtype,
    ),

    // Function application: `f x y z`
    // Uses prec.left to parse `f x y` as `(f x) y`
    application: $ => prec.left(PREC.app, seq(
      field('name', $._expression),
      field('arguments', choice(
        $._atom,
        $.fun,
        $.if,
        $.match,
        $.do,
        $.by,
      )),
    )),

    // Array/list subscript: `arr[i]` or `arr[i]!` or `arr[i]?`
    // Also handles subarray slice: `arr[start:stop]`.
    //
    // Index/slice as separate alternatives rather than nested `optional()`s — see #1.
    _name: $ => prec.right(seq(
      choice($.identifier, $.escaped_identifier),
      repeat(seq(token.immediate('.'), choice($.identifier, $.escaped_identifier))),
    )),

    // Projection: `x.foo` or `x.1` or `x.«name»` or `.field` (leading dot).
    // Splitting the leading-dot form into its own rule costs more states, not fewer — see #1.
    projection: $ => prec.left(PREC.proj, seq(
      optional(field('term', $._expression)),
      choice(
        token.immediate('.'),  // For `x.field` where x is an expression
        '.',                   // For `.field` (leading dot)
      ),
      field('name', choice($.identifier, $.escaped_identifier, $.number)),
    )),

    // Arrow type: `A → B`
    arrow: $ => prec.right(PREC.low, seq(
      field('domain', $._expression),
      choice('->', '→'),
      field('codomain', $._expression),
    )),

    // Binary operators with table-driven precedence.
    // One hidden operator-class rule per precedence level (see `_op_*` below) — see #1.
    binary_expression: $ => {
      const leftAssoc = [
        [PREC.low, $._op_or],
        [PREC.and, $._op_and],
        [PREC.compare, $._op_cmp],
        [PREC.add, $._op_add],
        [PREC.mul, $._op_mul],
        [PREC.app + 1, $._op_pipe],
      ];

      // Right-associative: $, <|, ::, ^, ∘
      const rightAssoc = [
        [PREC.low, $._op_dollar],
        [PREC.add, $._op_cons],
        [PREC.mul, $._op_pow],
        [PREC.app + 1, $._op_lpipe],
      ];

      return choice(
        ...leftAssoc.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
        ...rightAssoc.map(([precedence, operator]) =>
          prec.right(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
      );
    },

    // Operator classes: one hidden rule per precedence level. Kept as
    // separate literals rather than one folded terminal per level (cheaper,
    // but erases individual symbols from node-types.json) — see #1.
    _op_or: _ => choice('||', '∨', '<|>', '<$>', '<*>', '*>', '<*'),
    _op_and: _ => choice('&&', '∧'),
    // Membership/subset relations — see #8.
    _op_cmp: _ => choice('==', '!=', '=', '<', '>', '<=', '>=', '≤', '≥', '≠',
                         '∣', '↔', '⊢', '∈', '∉', '⊆', '⊂', '⊇', '⊃'),
    _op_add: _ => choice('+', '-', '++', '∪', '∩', '×', '\\'),
    _op_mul: _ => choice('*', '/', '%'),
    _op_pipe: _ => choice('|>', '|>.'),
    _op_dollar: _ => '$',
    _op_cons: _ => '::',
    _op_pow: _ => choice('^', '∘'),
    _op_lpipe: _ => '<|',

    // Prefix operators (includes monadic lift ← for do-blocks).
    // Plain `prec`, not `prec.right` — see #1.
    _binding_body: $ => prec.right(seq(
      ':=',
      field('value', $._expression),
      choice(';', $._layout_semicolon),
      field('body', $._expression),
    )),

    // ============================================================
    // Tactic mode (entered via `by`)
    // Tactics are a separate syntactic category from expressions.
    // Expressions can contain `by` blocks, but never raw tactics.
    // ============================================================

    // `by` is the only entry point from expression world into tactic world.
    let: $ => prec.right(choice(
      // Identifier form: always wins for bare identifiers.
      // Subsumes function form (with binders) and simple form (without).
      seq('let', field('name', $.identifier),
          optional(field('parameters', $.parameters)),
          optional($._type_spec), $._binding_body),
      // Pattern form: tuple destructuring and holes only.
      // Constructor patterns in `let` require qualified names, parsed differently.
      seq('let', field('pattern', choice($.tuple_pattern, $.hole)),
          optional($._type_spec), $._binding_body),
    )),

    // Lean's letIdBinder: binderIdent | bracketedBinder
    if: $ => prec.right(seq(
      'if',
      optional(seq(field('hyp', $.identifier), ':')),
      field('condition', $._expression),
      $._then_else,
    )),

    // Shared `then expr [else expr]` tail for `if` and `if_let` — extracted
    // so the parser reuses states across both forms.
    _then_else: $ => prec.right(seq(
      'then',
      field('then', $._expression),
      optional(seq('else', field('else', $._expression))),
    )),

    // If-let pattern matching: `if let some x := e then ...`
    // Parsed as do-element or standalone, uses `let` keyword after `if`
    match: $ => prec.right(seq(
      'match',
      field('scrutinees', commaSep1($._expression)),
      'with',
      repeat1($.match_arm),
    )),

    match_arm: $ => prec.right(seq(
      '|',
      field('patterns', commaSep1($._expression)),
      arrow(),
      $._match_body_start,
      field('body', $._expression),
      $._layout_end,
    )),

    // Do notation with layout-sensitive parsing
    // Elements are separated by newlines at the same indentation level
    do: $ => prec.right(seq(
      'do',
      $._layout_start,
      $._do_seq,
      optional($._layout_end),
    )),

    // Sequence of do elements separated by layout semicolons or explicit semicolons
    _do_seq: $ => prec.right(seq(
      $._do_element,
      repeat(seq(
        choice($._layout_semicolon, ';'),
        $._do_element,
      )),
    )),

    parenthesized: $ => seq(
      '(',
      optional(seq(
        $._expression,
        optional(seq(':', field('type', $._expression))),
      )),
      ')',
    ),

    // Named argument: `(name := value)`
    _expr_list: $ => commaSep1($._expression),

    anonymous_constructor: $ => seq('⟨', optional($._expr_list), '⟩'),

    // Subtype: `{x // P}` or `{x : T // P}`
    identifier: _ => /[_a-zA-Zα-ωΑ-Ωℕℤℚℝℂ∇][_a-zA-Z0-9'α-ωΑ-Ωℕℤℚℝℂ∇?!₀-₉ₐ-ₜᵢ-ᵪⱼ]*/,

    // Escaped identifier: `«name with spaces»`
    number: _ => choice(
      /\d+/,                    // decimal
      /0x[0-9a-fA-F]+/,         // hex
      /0b[01]+/,                // binary
      /0o[0-7]+/,               // octal
    ),
